# wsl-chrome-mcp

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml  setup-wsl-network.sh
.sisyphus/notepads/chrome-session-persistence/: learnings.md
.sisyphus/notepads/no-kill-chrome/: learnings.md
opencode-plugin/: chrome-session.ts
src/wsl_chrome_mcp/: __init__.py  cdp_client.py  cdp_proxy.py  chrome_launcher.py  chrome_pool.py  cli.py  config.py  logging_config.py  persistent_cdp.py  proxy_session_manager.py  ps_relay.py  server.py  session_manager.py  session_store.py  state.py  tunnel.py  wsl.py  wslconfig.py
src/wsl_chrome_mcp/tools/: __init__.py  base.py  emulation.py  input.py  monitoring.py  navigation.py  performance.py  screenshot.py  script.py  session.py  snapshot.py
src/wsl_chrome_mcp/tui/: app.py  app.tcss
tests/: __init__.py  test_chrome_pool.py  test_isolated_concurrency.py  test_proxy_session_manager.py  test_reconnection.py  test_session_isolation_e2e.py  test_session_manager.py  test_session_store.py  test_tools.py  test_wsl.py
